Add Partner module & user manager

--- a/pages/partner/AddContract.html
+++ b/pages/partner/AddContract.html
@@ -5,13 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../../static/img/logo.png">
-        <title>添加医生 | 合伙人</title>
+        <title>添加契约 | 合伙人</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../lib/bootstrap-3.3.5-dist/flatly/bootstrap.min.css">
         <!-- jQuery UI -->
         <link rel="stylesheet" href="../../lib/jquery-ui-1.11.4/jquery-ui.min.css">
         <!-- DataTables -->
         <link rel="stylesheet" href="../../lib/DataTables-1.10.8/css/dataTables.bootstrap.min.css">
+        <!-- Bootstrap-Datetimepicker -->
+        <link rel="stylesheet" href="../../lib/bootstrap-datetimepicker/bootstrap-datetimepicker.min.css">
         <!-- Normalize.css -->
         <link rel="stylesheet" href="../../lib/normalize.css">
 
@@ -91,13 +93,13 @@
                                 <span>医生团队管理</span>
                                 <span class="caret"></span>
                             </a>
-                            <ul id="team-drop" class="">
-                                <li class="active"><a href="doctorManage.html">医生管理</a></li>
+                            <ul id="team-drop" class="collapse">
+                                <li class=""><a href="doctorManage.html">医生管理</a></li>
                                 <li><a href="technicianManage.html">技师管理</a></li>
                                 <li><a href="teamManage.html">团队管理</a></li>
                             </ul>
                         </li>
-                        <li class="">
+                        <li class="active">
                             <a href="contractManage.html">契约管理</a>
                         </li>
                         <li class="">
@@ -110,58 +112,38 @@
         <div class="row main-page">
             <div class="path-navigation">
                 <ol class="breadcrumb">
-                    <li>医生团队管理</li>
-                    <li><a href="doctorManage.html">医生管理</a></li>
-                    <li class="active">添加医生</li>
+                    <li><a href="contractManage.html">契约管理</a></li>
+                    <li class="active">添加契约</li>
                 </ol>
             </div>
             <div class="container-fluid" style="max-width: 1300px;">
                 <form class="form-horizontal">
-                    <legend><b>添加医生</b></legend>
+                    <legend><b>添加契约</b></legend>
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <div class="panel-title">账户信息</div>
+                            <div class="panel-title">服务对象信息</div>
                         </div>
                         <div class="panel-body">
                             <div class="form-group">
-                                <label for="inputUsername" class="col-lg-3 control-label">用户名</label>
+                                <label for="inputUsername" class="col-lg-3 control-label">机构名称</label>
                                 <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputUsername" name="username" placeholder="请输入用户名...">
+                                    <input type="text" class="form-control" id="inputHospital" name="hospital" placeholder="请输入机构名称...">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="inputPassword" class="col-lg-3 control-label">密码</label>
+                                <label for="inputPassword" class="col-lg-3 control-label">类型</label>
                                 <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputPassword" name="password" placeholder="请输入密码...">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="rePassword" class="col-lg-3 control-label">重复密码</label>
-                                <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="rePassword" placeholder="请重复输入密码...">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="" class="col-lg-3 control-label">状态</label>
-                                <div class="col-lg-7">
-                                    <select name="status" id="selectStatus" class="form-control">
-                                        <option value="1">正常使用</option>
-                                        <option value="0">停用</option>
+                                    <select name="type" id="selectType" class="form-control">
+                                        <option value="1">社区卫生服务中心</option>
+                                        <option value="2">乡镇卫生院</option>
+                                        <option value="3">村卫生室</option>
                                     </select>
                                 </div>
                             </div>
-                            <input type="hidden" id="inputTime" name="time">
-                        </div>
-                    </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="panel-title">基本信息</div>
-                        </div>
-                        <div class="panel-body">
                             <div class="form-group">
-                                <label for="inputManager" class="col-lg-3 control-label">姓名</label>
+                                <label for="inputManager" class="col-lg-3 control-label">负责人</label>
                                 <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputManager" name="manager" placeholder="请输入负责人姓名...">
+                                    <input type="text" class="form-control" id="inputManager" placeholder="请输入负责人姓名...">
                                 </div>
                             </div>
                             <div class="form-group">
@@ -188,81 +170,52 @@
                                     <input type="text" class="form-control" id="inputArea" name="area" placeholder="请输入通讯地址...">
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label for="inputHousehold" class="col-lg-3 control-label">户口所在地</label>
-                                <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputHousehold" name="household" placeholder="请输入通讯地址...">
-                                </div>
-                            </div>
+                            <input type="hidden" id="inputTime" name="time">
                         </div>
                     </div>
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <div class="panel-title">专业信息</div>
+                            <div class="panel-title">服务合同信息</div>
                         </div>
                         <div class="panel-body">
                             <div class="form-group">
-                                <label for="inputHospital" class="col-lg-3 control-label">所属医院</label>
-                                <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputHospital" name="hospital" placeholder="请输入所属医院...">
+                                <label for="inputPrice" class="col-lg-3 control-label">单价(元/单)</label>
+                                <div class="col-lg-2">
+                                    <input type="text" class="form-control" id="inputPrice" name="price" placeholder="请输入单价...">
+                                </div>
+                                <label for="selectCheckType" class="col-lg-2 control-label">类型</label>
+                                <div class="col-lg-3">
+                                    <select name="checktype" id="selectCheckType" class="form-control">
+                                        <option value="1">动态心电</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <label for="inputOffice" class="col-lg-3 control-label">科室/职务</label>
-                                <div class="col-lg-4">
-                                    <input type="text" class="form-control" id="inputOffice" name="office" placeholder="请输入科室...">
+                                <label for="inputLimit" class="col-lg-3 control-label">检查单数量上限(-1为无限制)</label>
+                                <div class="col-lg-7">
+                                    <input type="text" class="form-control" id="inputLimit" name="limit" placeholder="请输入检查单数量上限...">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="inputBegintime" class="col-lg-3 control-label">服务时间</label>
+                                <div class="col-lg-3">
+                                    <div class="input-group date" id="beginDatetimepicker">
+                                        <input type="text" class="form-control" id="inputBegintime" name="begintime" placeholder="请选择起始时间...">
+                                        <div class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-1" style="text-align:center; line-height: 43px;">
+                                    <span class="glyphicon glyphicon-minus"></span>
                                 </div>
                                 <div class="col-lg-3">
-                                    <input type="text" class="form-control" id="inputJob" name="job" placeholder="请输入职务...">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputTechTitle" class="col-lg-3 control-label">职称</label>
-                                <div class="col-lg-7">
-                                    <input type="text" class="form-control" id="inputTechTitle" name="techtitle" placeholder="请输入职称...">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputQual" class="col-lg-3 control-label">医师资格证书编码</label>
-                                <div class="col-lg-5">
-                                    <input type="text" class="form-control" id="inputQual" name="qual" placeholder="请输入医师资格证书编码...">
-                                </div>
-                                <div class="col-lg-2">
-                                    <input type="text" class="form-control" id="inputQualTime" name="qualtime" placeholder="请输入发证时间...">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPract" class="col-lg-3 control-label">医师执业证书编码</label>
-                                <div class="col-lg-5">
-                                    <input type="text" class="form-control" id="inputPract" name="pract" placeholder="请输入医师执业证书编码...">
-                                </div>
-                                <div class="col-lg-2">
-                                    <input type="text" class="form-control" id="inputPractTime" name="practtime" placeholder="请输入发证时间...">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputSchool" class="col-lg-3 control-label">毕业院校及专业</label>
-                                <div class="col-lg-4">
-                                    <input type="text" class="form-control" id="inputSchool" name="school" placeholder="请输入毕业院校...">
-                                </div>
-                                <div class="col-lg-3">
-                                    <input type="text" class="form-control" id="inputMajor" name="major" placeholder="请输入专业...">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="" class="col-lg-3 control-label">职业培训情况(含进修和培训)</label>
-                                <div class="col-lg-7">
-                                    <textarea name="" id="" class="form-control" rows="3">
-
-                                    </textarea>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="" class="col-lg-3 control-label">科研工作情况(项目名称/编号/来源/年度)</label>
-                                <div class="col-lg-7">
-                                    <textarea name="" id="" class="form-control" rows="3">
-
-                                    </textarea>
+                                    <div class="input-group date" id="endDatetimepicker">
+                                        <input type="text" class="form-control" id="inputEndtime" name="endtime" placeholder="请选择结束时间...">
+                                        <div class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -270,7 +223,7 @@
                     <div class="form-group">
                         <div class="col-lg-8 col-lg-offset-3">
                             <a href="javascript:void(0);" class="btn btn-primary" id="submitBtn">提交</a>
-                            <a href="doctorManage.html" class="btn btn-default" id="cancerBtn">取消</a>
+                            <a href="contractManage.html" class="btn btn-default" id="cancerBtn">取消</a>
                         </div>
                     </div>
                 </form>
@@ -286,7 +239,10 @@
         <!-- DataTables -->
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
+        <!-- Bootstrap-Datetimepick -->
+        <script src="../../lib/bootstrap-datetimepicker/moment/moment.js"></script>
+        <script src="../../lib/bootstrap-datetimepicker/bootstrap-datetimepicker.min.js"></script>
 
-        <script src="../../static/js/partner/doctorManage.js"></script>
+        <script src="../../static/js/partner/AddContract.js"></script>
     </body>
 </html>
