--- a/pages/partner/AddTeam.html
+++ b/pages/partner/AddTeam.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="../../static/img/logo.png">
-        <title>技师管理 | 合伙人</title>
+        <title>添加团队 | 合伙人</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../lib/bootstrap-3.3.5-dist/flatly/bootstrap.min.css">
         <!-- jQuery UI -->
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="../../lib/normalize.css">
 
         <link rel="stylesheet" href="../../static/css/frame.css">
+        <link rel="stylesheet" href="../../static/css/partner/teamDetails.css">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!-- Warning: Respond.js doesn't work if you view the page via file:// -->
@@ -93,8 +94,8 @@
                             </a>
                             <ul id="team-drop" class="">
                                 <li><a href="doctorManage.html">医生管理</a></li>
-                                <li class="active"><a href="technicianManage.html">技师管理</a></li>
-                                <li><a href="teamManage.html">团队管理</a></li>
+                                <li><a href="technicianManage.html">技师管理</a></li>
+                                <li class="active"><a href="teamManage.html">团队管理</a></li>
                             </ul>
                         </li>
                         <li class="">
@@ -111,22 +112,55 @@
             <div class="path-navigation">
                 <ol class="breadcrumb">
                     <li>医生团队管理</li>
-                    <li class="active">技师管理</li>
+                    <li><a href="teamManage.html">团队管理</a></li>
+                    <li class="active">添加团队</li>
                 </ol>
             </div>
-            <div class="container-fluid">
-                <b class="table-title pull-left">技师列表</b>
-                <a href="AddTechnician.html" class="btn btn-primary btn-sm pull-right"><span class="glyphicon glyphicon-plus"></span>&nbsp;添加技师</a>
+            <div class="container team-container">
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label class="control-label">团队名称 :</label>
+                        <input type="text" class="form-control" placeholder="请输入团队名称">
+                    </div>
+                </form>
+                <form class="form-inline">
+                    <div class="pull-right">
+                        <a href="javascript:void(0);" class="btn btn-primary btn-sm" id="modifyTeamNameBtn">创建团队</a>
+                    </div>
+                </form>
+            </div>
+            <div class="container-fluid title-container">
+                <b class="table-title pull-left">医生列表</b>
+                <a href="javascript:void(0);" class="btn btn-primary btn-sm pull-right" id="addDocBtn"><span class="glyphicon glyphicon-plus"></span>&nbsp;添加医生</a>
             </div>
             <div class="container-fluid table-container">
-                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="technicianTable">
+                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="doctorTable">
+                    <thead>
+                        <tr>
+                            <th>编号</th>
+                            <th>用户名</th>
+                            <th>医生姓名</th>
+                            <th>所属医院</th>
+                            <th>职称</th>
+                            <th>身份证号</th>
+                            <th>状态</th>
+                            <th>操作</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <div class="container-fluid title-container">
+                <b class="table-title pull-left">技师列表</b>
+                <a href="javascript:void(0);" class="btn btn-primary btn-sm pull-right" id="addTechBtn"><span class="glyphicon glyphicon-plus"></span>&nbsp;添加技师</a>
+            </div>
+            <div class="container-fluid table-container">
+                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="technicianTalbe">
                     <thead>
                         <tr>
                             <th>编号</th>
                             <th>用户名</th>
                             <th>姓名</th>
                             <th>身份证号</th>
-                            <th>创建时间</th>
                             <th>状态</th>
                             <th>操作</th>
                         </tr>
@@ -135,20 +169,100 @@
             </div>
         </div>
 
-        <div id="stopModal" class="modal fade">
+        <div id="addDocModal" class="modal fade">
             <div class="modal-dialog">
-                <input type="hidden" id="stopId">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">停用状态修改提示</h4>
+                        <h4 class="modal-title">添加医生</h4>
                     </div>
                     <div class="modal-body">
-                        确认停用该技师状态?
+                        <form class="">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="searchDoc" placeholder="请输入id/姓名...">
+                                    <span class="input-group-btn">
+                                        <a href="javascript:void(0);" class="btn btn-primary" id="searchDocBtn">
+                                            <span class="glyphicon glyphicon-search"></span>
+                                        </a>
+                                    </span>
+                                </div>
+                            </div>
+                        </form>
+                        <table class="table table-striped table-hover" style="display:none;" id="searchDocResult">
+                            <thead>
+                                <th>编号</th>
+                                <th>用户名</th>
+                                <th>姓名</th>
+                                <th>#</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>03</td>
+                                    <td>doctor1</td>
+                                    <td>张医生</td>
+                                    <td><input type="checkbox"></td>
+                                </tr>
+                                <tr>
+                                    <td>05</td>
+                                    <td>doctor7</td>
+                                    <td>李医生</td>
+                                    <td><input type="checkbox"></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                     <div class="modal-footer">
-                        <a href="javascript:void(0);" class="btn btn-primary" id="stopModalBtn">确认</a>
-                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" id="addDocModalBtn">添加</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="addTechModal" class="modal fade">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">添加医生</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form class="">
+                            <div class="form-group">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" id="searchTech" placeholder="请输入id/姓名...">
+                                    <span class="input-group-btn">
+                                        <a href="javascript:void(0);" class="btn btn-primary" id="searchTechBtn">
+                                            <span class="glyphicon glyphicon-search"></span>
+                                        </a>
+                                    </span>
+                                </div>
+                            </div>
+                        </form>
+                        <table class="table table-striped table-hover" style="display:none;" id="searchTechResult">
+                            <thead>
+                                <th>编号</th>
+                                <th>用户名</th>
+                                <th>姓名</th>
+                                <th>#</th>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>02</td>
+                                    <td>technician1</td>
+                                    <td>技师A</td>
+                                    <td><input type="checkbox"></td>
+                                </tr>
+                                <tr>
+                                    <td>05</td>
+                                    <td>technician8</td>
+                                    <td>技师E</td>
+                                    <td><input type="checkbox"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="addTechModalBtn">添加</a>
                     </div>
                 </div>
             </div>
@@ -163,10 +277,27 @@
                         <h4 class="modal-title">删除提示</h4>
                     </div>
                     <div class="modal-body">
-                        确认删除该技师?
+                        请确认删除该团队成员?
                     </div>
                     <div class="modal-footer">
-                        <a href="javascript:void(0);" class="btn btn-primary" id="deleteModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" id="confirmDeleteBtn">确认删除</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="successModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="deleteId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">创建成功提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        创建成功！
+                    </div>
+                    <div class="modal-footer">
                         <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
                     </div>
                 </div>
@@ -183,6 +314,6 @@
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
 
-        <script src="../../static/js/partner/technicianManage.js"></script>
+        <script src="../../static/js/partner/AddTeam.js"></script>
     </body>
 </html>
