--- a/pages/partner/contractManage.html
+++ b/pages/partner/contractManage.html
@@ -115,22 +115,80 @@
             </div>
             <div class="container-fluid">
                 <b class="table-title pull-left">契约列表</b>
-                <a href="AddPartner.html" class="btn btn-primary btn-sm pull-right"><span class="glyphicon glyphicon-plus"></span>&nbsp;添加契约</a>
+                <a href="AddContract.html" class="btn btn-primary btn-sm pull-right"><span class="glyphicon glyphicon-plus"></span>&nbsp;添加契约</a>
             </div>
             <div class="container-fluid table-container">
-                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="partnerTable">
+                <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="contractTable">
                     <thead>
                         <tr>
                             <th>编号</th>
-                            <th>用户名</th>
-                            <th>负责人</th>
-                            <th>身份证号</th>
-                            <th>创建时间</th>
+                            <th>医院名称</th>
+                            <th>院方负责人</th>
+                            <th>联系方式</th>
+                            <th>开始时间</th>
+                            <th>结束时间</th>
                             <th>状态</th>
                             <th>操作</th>
                         </tr>
                     </thead>
                 </table>
+            </div>
+        </div>
+
+        <div id="stopModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="stopId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">停用状态修改提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认停用该契约?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="stopModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="deleteModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="deleteId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">删除提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认删除该契约?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="deleteModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="startModal" class="modal fade">
+            <div class="modal-dialog">
+                <input type="hidden" id="startId">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">启用提示</h4>
+                    </div>
+                    <div class="modal-body">
+                        确认启用该契约?
+                    </div>
+                    <div class="modal-footer">
+                        <a href="javascript:void(0);" class="btn btn-primary" id="startModalBtn">确认</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" data-dismiss="modal">返回</a>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -144,6 +202,6 @@
         <script src="../../lib/DataTables-1.10.8/js/jquery.dataTables.min.js"></script>
         <script src="../../lib/DataTables-1.10.8/js/dataTables.bootstrap.min.js"></script>
 
-        <script src="../../static/js/admin/partnerManage.js"></script>
+        <script src="../../static/js/partner/contractManage.js"></script>
     </body>
 </html>
