--- a/pages/partner/teamManage.html
+++ b/pages/partner/teamManage.html
@@ -116,7 +116,7 @@
             </div>
             <div class="container-fluid">
                 <b class="table-title pull-left">团队列表</b>
-                <a href="AddPartner.html" class="btn btn-primary btn-sm pull-right"><span class="glyphicon glyphicon-plus"></span>&nbsp;添加团队</a>
+                <a href="AddTeam.html" class="btn btn-primary btn-sm pull-right"><span class="glyphicon glyphicon-plus"></span>&nbsp;添加团队</a>
             </div>
             <div class="container-fluid table-container">
                 <table class="table table-striped table-hover table-bordered" cellspacing="0" width="100%" id="teamTable">
